INT-5841, INT-5951, INT-6075: core feedback fields on mobile no longer overlap

--- a/less/bootswatch/web-bootswatch.less
+++ b/less/bootswatch/web-bootswatch.less
@@ -2014,3 +2014,13 @@ http://css-spinners.com/css/spinner/three-quarters.css
   display: none;
 }
 
+/** fix feedback field sizes on mobile devices **/
+@media screen and (max-width: @screen-xs) {
+  textarea{
+    max-width: 100%;
+  }
+  input[type=text]{
+    max-width: 100%;
+  }
+}
+
